--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -42,99 +42,96 @@
             </div>
         </div>
     </nav>
-    <main class="page lanidng-page" style="padding-top: 0px;">
-        <section class="portfolio-block block-intro">
-            <div class="container"><img class="img-fluid shadow bounce animated" src="assets/img/PngItem_2522307.png" style="width: 145px;">
-                <div class="about-me">
-                    <p class="bounce animated" style="font-family: Sriracha, cursive;"><br><strong><span style="text-decoration: underline;">Project</span></strong><br><strong><span style="text-decoration: underline;">                          "GW EINSTEIN"</span></strong><br> SEARCH FOR GRAVITATIONAL WAVES<br>GAMMA
-                        RAYS - SUPERNOVA&nbsp; AND<br>ELECTROMAGNETIC EMISSION<br><br></p>
-                </div>
+    <main class="page lanidng-page" style="padding-top: 0px;"></main>
+    <section class="portfolio-block block-intro">
+        <div class="container"><img class="img-fluid shadow bounce animated" src="assets/img/PngItem_2522307.png" style="width: 145px;">
+            <div class="about-me">
+                <p class="bounce animated" style="font-family: Sriracha, cursive;"><br><strong><span style="text-decoration: underline;">Project</span></strong><br><strong><span style="text-decoration: underline;">                          "GW EINSTEIN"</span></strong><br> SEARCH FOR GRAVITATIONAL WAVES<br>GAMMA RAYS
+                    - SUPERNOVA&nbsp; AND<br>ELECTROMAGNETIC EMISSION<br><br></p>
             </div>
-            <p class="bounce animated" style="font-family: Sriracha, cursive;">Team "La NASA en tu patio trasero"<br> Members Team Victoria Lomanto - Walter Wagner<br>Outstanding events<br> Data Hub<br></p><img class="img-fluid shadow" src="assets/img/logo2spaceapp.png">
-            <div class="container">
-                <p></p>
+        </div>
+        <p class="bounce animated" style="font-family: Sriracha, cursive;">Team "La NASA en tu patio trasero"<br> Members Team Victoria Lomanto - Walter Wagner<br>Outstanding events<br> Data Hub<br></p><img class="img-fluid shadow" src="assets/img/logo2spaceapp.png"></section>
+    <div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/hebGhsNsjG0" width="560" height="315" style="width: 100%;"></iframe></div>
+                <div class="col-md-4"><iframe class="shadow" allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/FANglwyE5dw" width="560" height="315" style="width: 100%;"></iframe></div>
+                <div class="col-md-4"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/YHS9g72npqA" width="560" height="315" style="width: 100%;"></iframe></div>
             </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col" style="width: 30%;"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/hebGhsNsjG0" width="560" height="315" style="width: 100%;"></iframe></div>
-                    <div class="col" style="width: 30%;"><iframe class="shadow" allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/FANglwyE5dw" width="560" height="315" style="width: 100%;"></iframe></div>
-                    <div class="col" style="width: 30%;"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/YHS9g72npqA" width="560" height="315" style="width: 100%;"></iframe></div>
+        </div>
+    </div>
+    <section class="shadow portfolio-block photography">
+        <div class="container text-center">
+            <div class="row no-gutters">
+                <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/rjulve32747999-nasa01-estados-unidos-2016-fica-facilitada-181203134335-1543841131889.jpg" style="width: 514px;height: 309px;"></a></div>
+                <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/41586_2019_1129_Fig1_HTML.png" style="height: 309px;width: 550px;"></a></div>
+                <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/d41586-019-00573-4_16480554.jpg" style="height: 309px;width: 560px;"></a></div>
+            </div>
+        </div>
+    </section>
+    <section class="portfolio-block call-to-action border-bottom" style="font-family: Sriracha, cursive;padding-bottom: 0px;">
+        <div class="container">
+            <div class="table-responsive" style="width: 750;">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th class="text-left">
+                                <form class="text-center" action="javascript:search();">
+                                    <p>Search Information</p><input class="form-control" type="search" data-toggle="tooltip" data-bs-tooltip="" title="Search Demo Only">
+                                    <p></p><button class="btn btn-primary" data-toggle="tooltip" data-bs-tooltip="" id="go" type="submit" style="margin-left: 15px;" onclick="document.getElementById(&#39;searchForm&#39;).submit(); return false;" title="Search Demo Only">Search</button></form>
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr></tr>
+                        <tr></tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="container text-center"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="downloadapp.html" style="font-size: 37px;">Download App</a></div>
+        <div class="container">
+            <p></p>
+        </div>
+        <div class="container text-center"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="catalague.html" style="font-size: 37px;">View Catalogue</a></div>
+        <div class="container">
+            <p></p>
+        </div>
+        <div class="container text-center"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="games.html" style="font-size: 37px;">Games</a></div>
+        <div class="container text-center" style="margin-top: 20px;margin-bottom: 20px;"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="sounds.html" style="font-size: 37px;">Sounds</a></div>
+        <div class="container text-center" style="margin-top: 20px;margin-bottom: 20px;"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="https://www.bbc.co.uk/programmes/p033jbv4" style="font-size: 37px;" target="_blank">Podcast</a></div>
+        <div class="container">
+            <p></p>
+        </div>
+        <section class="portfolio-block photography">
+            <div class="container text-center">
+                <div class="row no-gutters">
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/GWvisual.jpg" style="width: 568px;height: 309px;"></a></div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/unnamed.jpg" style="height: 309px;"></a></div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/rayos-gamma_0.jpg" style="height: 309px;width: 561px;"></a></div>
                 </div>
             </div>
         </section>
         <section class="shadow portfolio-block photography">
             <div class="container text-center">
                 <div class="row no-gutters">
-                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/rjulve32747999-nasa01-estados-unidos-2016-fica-facilitada-181203134335-1543841131889.jpg" style="width: 514px;height: 309px;"></a></div>
-                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/41586_2019_1129_Fig1_HTML.png" style="height: 309px;width: 550px;"></a></div>
-                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/d41586-019-00573-4_16480554.jpg" style="height: 309px;width: 560px;"></a></div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/1366_2000.jpg" style="width: 547px;height: 309px;"></a></div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/30-11-17-ligo.jpg" style="height: 309px;"></a></div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/logo2spaceapp.png" style="height: 310px;width: 517px;"></a></div>
                 </div>
             </div>
         </section>
-        <section class="portfolio-block call-to-action border-bottom" style="font-family: Sriracha, cursive;padding-bottom: 0px;">
-            <div class="container">
-                <div class="table-responsive" style="width: 750;">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th class="text-left">
-                                    <form class="text-center" action="javascript:search();">
-                                        <p>Search Information</p><input class="form-control" type="search" data-toggle="tooltip" data-bs-tooltip="" title="Search Demo Only">
-                                        <p></p><button class="btn btn-primary" data-toggle="tooltip" data-bs-tooltip="" id="go" type="submit" style="margin-left: 15px;" onclick="document.getElementById(&#39;searchForm&#39;).submit(); return false;" title="Search Demo Only">Search</button></form>
-                                </th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr></tr>
-                            <tr></tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-            <div class="container text-center"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="downloadapp.html" style="font-size: 37px;">Download App</a></div>
-            <div class="container">
-                <p></p>
-            </div>
-            <div class="container text-center"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="catalague.html" style="font-size: 37px;">View Catalogue</a></div>
-            <div class="container">
-                <p></p>
-            </div>
-            <div class="container text-center"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="games.html" style="font-size: 37px;">Games</a></div>
-            <div class="container text-center" style="margin-top: 20px;margin-bottom: 20px;"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="sounds.html" style="font-size: 37px;">Sounds</a></div>
-            <div class="container text-center" style="margin-top: 20px;margin-bottom: 20px;"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="https://www.bbc.co.uk/programmes/p033jbv4" style="font-size: 37px;" target="_blank">Podcast</a></div>
-            <div class="container">
-                <p></p>
-            </div>
-            <section class="portfolio-block photography">
-                <div class="container text-center">
-                    <div class="row no-gutters">
-                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/GWvisual.jpg" style="width: 568px;height: 309px;"></a></div>
-                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/unnamed.jpg" style="height: 309px;"></a></div>
-                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/rayos-gamma_0.jpg" style="height: 309px;width: 561px;"></a></div>
-                    </div>
-                </div>
-            </section>
-            <section class="shadow portfolio-block photography">
-                <div class="container text-center">
-                    <div class="row no-gutters">
-                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/1366_2000.jpg" style="width: 547px;height: 309px;"></a></div>
-                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/30-11-17-ligo.jpg" style="height: 309px;"></a></div>
-                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/logo2spaceapp.png" style="height: 310px;width: 517px;"></a></div>
-                    </div>
-                </div>
-            </section>
-        </section>
-        <section class="portfolio-block skills" style="padding: 0;padding-top: 0;margin-bottom: 20px;">
-            <div class="container">
-                <div class="heading"></div>
-                <h3 class="text-center" data-aos="zoom-out" style="font-family: Sriracha, cursive;"><strong>LINKS EXTERNAL INFORMATION</strong><br></h3>
-            </div>
-            <div class="container">
-                <div class="heading"></div>
-            </div>
-            <div class="container text-center" style="font-family: Sriracha, cursive;"><a class="btn btn-primary" role="button" data-bs-hover-animate="pulse" style="font-size: 37px;" href="infoLibrary.html">Info Library</a></div>
-        </section>
-    </main>
+    </section>
+    <section class="portfolio-block skills" style="padding: 0;padding-top: 0;margin-bottom: 20px;">
+        <div class="container">
+            <div class="heading"></div>
+            <h3 class="text-center" data-aos="zoom-out" style="font-family: Sriracha, cursive;"><strong>LINKS EXTERNAL INFORMATION</strong><br></h3>
+        </div>
+        <div class="container">
+            <div class="heading"></div>
+        </div>
+        <div class="container text-center" style="font-family: Sriracha, cursive;"><a class="btn btn-primary" role="button" data-bs-hover-animate="pulse" style="font-size: 37px;" href="infoLibrary.html">Info Library</a></div>
+    </section>
     <section class="portfolio-block website gradient">
         <div class="container text-center"><img class="img-fluid shadow" data-bs-hover-animate="pulse" src="assets/img/bunnysuitadj1.jpg"></div>
         <div></div>
