--- a/eventapi/html/allevents/sounds.html
+++ b/eventapi/html/allevents/sounds.html
@@ -98,6 +98,30 @@
                                 <p class="text-left">H1</p><audio controls=""><source src="https://www.gw-openscience.org/static/audio/gwtc1/wav/H1-GW150914-data.wav" type="audio/wav"></audio>
                                 <p class="text-left">L1</p><audio controls=""><source src="https://www.gw-openscience.org/static/audio/gwtc1/wav/L1-GW150914-data.wav" type="audio/wav"></audio></td>
                         </tr>
+                        <tr>
+                            <td>EINSTEIN151012<br></td>
+                            <td>Total Mass:<br>36.9 M☉<br></td>
+                            <td><img class="img-fluid" src="https://www.gw-openscience.org/static/audio/gwtc1/wav/GW151012-template.png"><audio controls=""><source src="https://www.gw-openscience.org/static/audio/gwtc1/wav/GW151012-template.wav" type="audio/wav"></audio></td>
+                            <td>
+                                <p class="text-left">H1</p><audio controls=""><source src="https://www.gw-openscience.org/static/audio/gwtc1/wav/H1-GW150914-data.wav" type="audio/wav"></audio>
+                                <p class="text-left">L1</p><audio controls=""><source src="https://www.gw-openscience.org/static/audio/gwtc1/wav/L1-GW150914-data.wav" type="audio/wav"></audio></td>
+                        </tr>
+                        <tr>
+                            <td>EINSTEIN150914<br></td>
+                            <td>Total Mass:<br>66.2 M☉<br></td>
+                            <td><img class="img-fluid" src="https://www.gw-openscience.org/static/audio/gwtc1/wav/GW150914-template.png"><audio controls=""><source src="https://www.gw-openscience.org/static/audio/gwtc1/wav/GW150914-template.wav" type="audio/wav"></audio></td>
+                            <td>
+                                <p class="text-left">H1</p><audio controls=""><source src="https://www.gw-openscience.org/static/audio/gwtc1/wav/H1-GW151012-data.wav" type="audio/wav"></audio>
+                                <p class="text-left">L1</p><audio controls=""><source src="https://www.gw-openscience.org/static/audio/gwtc1/wav/L1-GW151012-data.wav" type="audio/wav"></audio></td>
+                        </tr>
+                        <tr>
+                            <td>EINSTEIN151226<br></td>
+                            <td>Total Mass:<br>21.4 M☉<br></td>
+                            <td><img class="img-fluid" src="https://www.gw-openscience.org/static/audio/gwtc1/wav/GW151226-template.png"><audio controls=""><source src="https://www.gw-openscience.org/static/audio/gwtc1/wav/GW151226-template.wav" type="audio/wav"></audio></td>
+                            <td>
+                                <p class="text-left">H1</p><audio controls=""><source src="https://www.gw-openscience.org/static/audio/gwtc1/wav/H1-GW151226-data.wav" type="audio/wav"></audio>
+                                <p class="text-left">L1</p><audio controls=""><source src="https://www.gw-openscience.org/static/audio/gwtc1/wav/L1-GW151226-data.wav" type="audio/wav"></audio></td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
