--- a/eventapi/html/allevents/catalogue/einstein190814.html
+++ b/eventapi/html/allevents/catalogue/einstein190814.html
@@ -77,10 +77,10 @@
                     </thead>
                     <tbody></tbody>
                 </table>
-            </div><img src="https://www.gw-openscience.org/static/images/thumbnails/new_thumbs/O3_Discovery_Papers/GW190814-v1-H1-qscan.png">
+            </div><img class="img-fluid" src="https://www.gw-openscience.org/static/images/thumbnails/new_thumbs/O3_Discovery_Papers/GW190814-v1-H1-qscan.png">
             <div class="container">
                 <p class="text-center"><strong>Sky Localization</strong><br></p>
-            </div><img src="https://gracedb.ligo.org/api/superevents/S190814bv/files/GW190814_skymap.png,0">
+            </div><img class="img-fluid" src="https://gracedb.ligo.org/api/superevents/S190814bv/files/GW190814_skymap.png,0">
             <div class="container">
                 <p class="text-center" style="font-size: 15px;">manually uploading <br>GW190814_skymap.png&nbsp;Submitted by Shaon Ghosh on June 25, 2020 17:19:45 UTC<br></p>
             </div>
