--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
-    <link rel="stylesheet" href="assets/css/Social-Icons.css">
+    <link rel="stylesheet" href="assets/css/styles.min.css">
 </head>
 
 <body>
@@ -69,7 +69,9 @@
             </div>
         </div>
     </section>
-    <section class="portfolio-block call-to-action border-bottom" style="font-family: Sriracha, cursive;padding-bottom: 0px;">
+    <section class="text-center portfolio-block call-to-action border-bottom" style="font-family: Sriracha, cursive;padding-bottom: 0px;">
+        <h1><strong>Black Hole</strong></h1>
+        <p><br>The result is a gravitational field so strong that nothing, not even light, can escape<br><br></p><img class="img-fluid" src="assets/img/1366_2000.jpg">
         <div class="container">
             <div class="table-responsive" style="width: 750;">
                 <table class="table">
@@ -148,10 +150,9 @@
     </footer>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
-    <script src="assets/js/theme.js"></script>
+    <script src="assets/js/script.min.js"></script>
 </body>
 
 </html>
