--- a/eventapi/html/allevents/infoLibrary.html
+++ b/eventapi/html/allevents/infoLibrary.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
-    <link rel="stylesheet" href="assets/css/Social-Icons.css">
+    <link rel="stylesheet" href="assets/css/styles.min.css">
 </head>
 
 <body>
@@ -117,7 +117,7 @@
                     </div>
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/1366_2000.jpg" style="width: 304px;"></div>
+                            <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/900px-Crab_Nebula.jpg" style="width: 304px;height: 205px;"></div>
                             <div class="card-body" data-bs-hover-animate="pulse" style="padding: 20px;"><a class="card-link" href="https://spaceplace.nasa.gov/supernova/en/" style="font-size: 22px;" target="_blank"><strong>SUPERNOVA</strong></a></div>
                         </div>
                     </div>
@@ -210,10 +210,9 @@
         </footer>
         <script src="assets/js/jquery.min.js"></script>
         <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-        <script src="assets/js/bs-init.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
-        <script src="assets/js/theme.js"></script>
+        <script src="assets/js/script.min.js"></script>
 </body>
 
 </html>
