--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -117,7 +117,7 @@
         <section class="shadow portfolio-block photography">
             <div class="container text-center">
                 <div class="row no-gutters">
-                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/1366_2000.jpg" style="width: 547px;height: 309px;"></a></div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/supernova.jpg" style="width: 547px;height: 309px;"></a></div>
                     <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/30-11-17-ligo.jpg" style="height: 309px;"></a></div>
                     <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/logo2spaceapp.png" style="height: 310px;width: 517px;"></a></div>
                 </div>
