--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -71,7 +71,7 @@
     </section>
     <section class="text-center portfolio-block call-to-action border-bottom" style="font-family: Sriracha, cursive;padding-bottom: 0px;">
         <h1><strong>Black Hole</strong></h1>
-        <p><br>The result is a gravitational field so strong that nothing, not even light, can escape<br><br></p><a href="assets/img/1366_2000.jpg" target="_blank"><img class="img-fluid" src="assets/img/1366_2000.jpg"></a>
+        <p><br>The result is a gravitational field so strong that nothing, not even light, can escape.<br><br></p><a href="assets/img/1366_2000.jpg" target="_blank"><img class="img-fluid" src="assets/img/1366_2000.jpg"></a>
         <div class="container">
             <div class="table-responsive" style="width: 750;">
                 <table class="table">
