--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -115,6 +115,10 @@
         <div class="container text-center" style="margin-top: 20px;margin-bottom: 20px;"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="sounds.html" style="font-size: 37px;">Sounds</a></div>
         <div class="container text-center" style="margin-top: 20px;margin-bottom: 20px;"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="https://www.bbc.co.uk/programmes/p033jbv4" style="font-size: 37px;" target="_blank">Podcast</a></div>
         <div class="container">
+            <p style="font-size: 20px;">Animation of the disturbances in space-time produced by binary systems composed of neutron stars, white dwarfs or black holes, orbiting around the common center of masses.</p>
+        </div>
+        <div class="container text-center"><img src="assets/img/Wavy.gif"></div>
+        <div class="container">
             <p></p>
         </div>
         <section class="portfolio-block photography">
