--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -70,7 +70,7 @@
         </div>
     </section>
     <section class="text-center portfolio-block call-to-action border-bottom" style="font-family: Sriracha, cursive;padding-bottom: 0px;">
-        <p>CLICK TO IMAGE OR BUTTON TO ENTER</p>
+        <p>TO ENTER THE GAME YOU CAN CLICK ON THE IMAGE OR THE BUTTON</p>
         <p>Keys to Play: A,S,D,W - MOUSE - Q,E ROTATE - ESCAPE MOUSE POINTER</p>
         <div class="container text-center"><a href="https://walterm128.github.io/gweinsteingame/" target="_blank"><img class="img-fluid" data-bs-hover-animate="pulse" src="assets/img/GWEinsteingame.jpg"></a></div>
         <div class="container text-center" style="margin-top: 10px;margin-bottom: 10px;"><a class="btn btn-primary" role="button" data-bs-hover-animate="pulse" target="_blank" href="https://walterm128.github.io/gweinsteingame/">GW EINSTEING GAME HERE</a></div>
