--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -46,7 +46,7 @@
     <section class="portfolio-block block-intro">
         <div class="container"><img class="img-fluid shadow bounce animated" src="assets/img/PngItem_2522307.png" style="width: 145px;">
             <div class="about-me">
-                <p class="bounce animated" style="font-family: Sriracha, cursive;"><br><strong><span style="text-decoration: underline;">Project</span></strong><br><strong><span style="text-decoration: underline;">                          "GW EINSTEIN"</span></strong><br> SEARCH FOR GRAVITATIONAL WAVES<br>GAMMA RAYS
+                <p class="bounce animated" style="font-family: Sriracha, cursive;font-size: 30px;"><br><strong><span style="text-decoration: underline;">Project</span></strong><br><strong><span style="text-decoration: underline;">                          "GW EINSTEIN"</span></strong><br> SEARCH FOR GRAVITATIONAL WAVES<br>GAMMA RAYS
                     - SUPERNOVA&nbsp; AND<br>ELECTROMAGNETIC EMISSION<br><br></p>
             </div>
         </div>
@@ -70,11 +70,12 @@
         </div>
     </section>
     <section class="text-center portfolio-block call-to-action border-bottom" style="font-family: Sriracha, cursive;padding-bottom: 0px;">
+        <p style="font-size: 40px;"><strong><span style="text-decoration: underline;">EXPLORATION GAME</span></strong></p>
         <p>TO ENTER THE GAME YOU CAN CLICK ON THE IMAGE OR THE BUTTON</p>
         <p>Keys to Play: A,S,D,W - MOUSE - Q,E ROTATE - ESCAPE MOUSE POINTER</p>
         <div class="container text-center"><a href="https://walterm128.github.io/gweinsteingame/" target="_blank"><img class="img-fluid" data-bs-hover-animate="pulse" src="assets/img/GWEinsteingame2.jpg"></a></div>
         <div class="container text-center" style="margin-top: 10px;margin-bottom: 10px;"><a class="btn btn-primary" role="button" data-bs-hover-animate="pulse" target="_blank" href="https://walterm128.github.io/gweinsteingame/">GW EINSTEING GAME HERE</a></div>
-        <h1><strong>Black Hole</strong></h1>
+        <h1><strong><span style="text-decoration: underline;">Black Hole</span></strong></h1>
         <p><br>The result is a gravitational field so strong that nothing, not even light, can escape.<br><br></p><a href="assets/img/1366_2000.jpg" target="_blank"><img class="img-fluid" src="assets/img/1366_2000.jpg"></a>
         <div class="container">
             <div class="table-responsive" style="width: 750;">
@@ -98,7 +99,7 @@
         <section class="portfolio-block skills" style="padding: 0;padding-top: 0;margin-bottom: 20px;">
             <div class="container">
                 <div class="heading"></div>
-                <h3 class="text-center" data-aos="zoom-out" style="font-family: Sriracha, cursive;"><strong>LINKS EXTERNAL INFORMATION</strong><br></h3>
+                <h3 class="text-center" data-aos="zoom-out" style="font-family: Sriracha, cursive;font-size: 40px;"><strong><span style="text-decoration: underline;">LINKS EXTERNAL INFORMATION</span></strong><br></h3>
             </div>
             <div class="container">
                 <div class="heading"></div>
@@ -116,6 +117,7 @@
         <div class="container text-center"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="games.html" style="font-size: 37px;">Games</a></div>
         <div class="container text-center" style="margin-top: 20px;margin-bottom: 20px;"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="sounds.html" style="font-size: 37px;">Sounds</a></div>
         <div class="container text-center" style="margin-top: 20px;margin-bottom: 20px;"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="https://www.bbc.co.uk/programmes/p033jbv4" style="font-size: 37px;" target="_blank">Podcast</a></div>
+        <div class="container"><a class="btn btn-primary" role="button" style="font-size: 37px;" target="_blank" href="https://github.com/walterm128/">Github Project</a></div>
         <div class="container">
             <p style="font-size: 20px;">Animation of the disturbances in space-time produced by binary systems composed of neutron stars, white dwarfs or black holes, orbiting around the common center of masses.</p>
         </div>
