--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -69,6 +69,10 @@
             </div>
         </div>
     </section>
+    <div class="container">
+        <p class="text-center" style="font-size: 20px;">Animation of the disturbances in space-time produced by binary systems composed of neutron stars, white dwarfs or black holes, orbiting around the common center of masses.</p>
+    </div>
+    <div class="container text-center"><img src="assets/img/Wavy.gif"></div>
     <section class="text-center portfolio-block call-to-action border-bottom" style="font-family: Sriracha, cursive;padding-bottom: 0px;">
         <p style="font-size: 40px;"><strong><span style="text-decoration: underline;">EXPLORATION GAME</span></strong></p>
         <p>TO ENTER THE GAME YOU CAN CLICK ON THE IMAGE OR THE BUTTON</p>
@@ -118,10 +122,6 @@
         <div class="container text-center" style="margin-top: 20px;margin-bottom: 20px;"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="sounds.html" style="font-size: 37px;">Sounds</a></div>
         <div class="container text-center" style="margin-top: 20px;margin-bottom: 20px;"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="https://www.bbc.co.uk/programmes/p033jbv4" style="font-size: 37px;" target="_blank">Podcast</a></div>
         <div class="container"><a class="btn btn-primary" role="button" style="font-size: 37px;" target="_blank" href="https://github.com/walterm128/">Github Project</a></div>
-        <div class="container">
-            <p style="font-size: 20px;">Animation of the disturbances in space-time produced by binary systems composed of neutron stars, white dwarfs or black holes, orbiting around the common center of masses.</p>
-        </div>
-        <div class="container text-center"><img src="assets/img/Wavy.gif"></div>
         <div class="container">
             <p></p>
         </div>
