--- a/eventapi/html/allevents/downloadapp.html
+++ b/eventapi/html/allevents/downloadapp.html
@@ -51,12 +51,10 @@
             </div>
             <div class="container text-center"><a class="btn btn-primary" role="button" href="https://play.google.com/store/apps/details?id=org.laserlabs.chirp" target="_blank">Android Ligo Aplication By Laser Labs</a></div>
             <div class="container text-center" style="margin-top: 20px;"><a class="btn btn-primary" role="button" target="_blank" href="https://mega.nz/file/5JUBBQra#yMX1Yv16tyOG7VqhAx8ttgSaYjodSRR0uDgH6RWD0tw">GW Einstein Application Android</a></div>
-            <div class="container">
-                <p></p>
-            </div>
-            <div class="container text-center"><img class="img-fluid" src="assets/img/900px-Crab_Nebula.jpg"></div>
+            <div class="container text-center" style="margin-top: 20px;"><a class="btn btn-primary" role="button" target="_blank" href="https://mega.nz/file/NF8gnCCR#qQR3aVrJElsBlbqwDWBKBrtn2ywNIsXj9Bla9oovYJ8">GW Einstein Game Android</a></div>
+            <div class="container text-center" style="margin-top: 20px;"><a class="btn btn-primary" role="button" target="_blank" href="https://mega.nz/file/lBlUmKSS#CP56qdZKbc0EHokLn8_ZYsAQojn6Uj2-QJnK_1xAZaU">GW Einstein Game PC</a></div>
         </section>
-    </main>
+    </main><img class="img-fluid" src="assets/img/900px-Crab_Nebula.jpg" style="width: 2080px;">
     <div class="social-icons"><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="https://www.youtube.com/watch?v=21X5lGlDOfg" target="_blank"><i class="icon ion-social-youtube"></i></a></div>
     <footer
         class="page-footer">
