--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -110,7 +110,7 @@
             </div>
             <div class="container text-center" style="font-family: Sriracha, cursive;"><a class="btn btn-primary" role="button" data-bs-hover-animate="pulse" style="font-size: 37px;" href="infoLibrary.html">Info Library</a></div>
         </section>
-        <div class="container text-center"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="downloadapp.html" style="font-size: 37px;">Download App</a></div>
+        <div class="container text-center"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="downloadapp.html" style="font-size: 37px;">Download Aplications PC-Android</a></div>
         <div class="container">
             <p></p>
         </div>
