--- a/eventapi/html/allevents/downloadapp.html
+++ b/eventapi/html/allevents/downloadapp.html
@@ -46,7 +46,7 @@
         <section class="portfolio-block contact">
             <div class="container">
                 <div class="heading">
-                    <h2>coming soon download apLICATIONS</h2>
+                    <h2>coming soon download appLICATIONS</h2>
                 </div>
             </div>
             <div class="container text-center"><a class="btn btn-primary" role="button" href="https://play.google.com/store/apps/details?id=org.laserlabs.chirp" target="_blank">Android Ligo Aplication By Laser Labs</a></div>
