--- a/eventapi/html/allevents/downloadapp.html
+++ b/eventapi/html/allevents/downloadapp.html
@@ -49,7 +49,7 @@
                     <h2>coming soon download appLICATIONS</h2>
                 </div>
             </div>
-            <div class="container text-center"><a class="btn btn-primary" role="button" href="https://play.google.com/store/apps/details?id=org.laserlabs.chirp" target="_blank">Android Ligo Aplication By Laser Labs</a></div>
+            <div class="container text-center"><a class="btn btn-primary" role="button" href="https://play.google.com/store/apps/details?id=org.laserlabs.chirp" target="_blank">Android Ligo Application By Laser Labs</a></div>
             <div class="container text-center" style="margin-top: 20px;"><a class="btn btn-primary" role="button" target="_blank" href="https://mega.nz/file/5JUBBQra#yMX1Yv16tyOG7VqhAx8ttgSaYjodSRR0uDgH6RWD0tw">GW Einstein Application Android</a></div>
             <div class="container text-center" style="margin-top: 20px;"><a class="btn btn-primary" role="button" target="_blank" href="https://mega.nz/file/QU8BlSYb#wJAi58rPIm438C9gOmRvmVinE5Iua4b8FW5vJ2bceoA">GW Einstein Game Android</a></div>
             <div class="container text-center" style="margin-top: 20px;"><a class="btn btn-primary" role="button" target="_blank" href="https://mega.nz/file/lBlUmKSS#CP56qdZKbc0EHokLn8_ZYsAQojn6Uj2-QJnK_1xAZaU">GW Einstein Game PC</a></div>
