--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -76,7 +76,7 @@
     <section class="text-center portfolio-block call-to-action border-bottom" style="font-family: Sriracha, cursive;padding-bottom: 0px;">
         <p style="font-size: 40px;"><strong><span style="text-decoration: underline;">EXPLORATION GAME</span></strong></p>
         <p>TO ENTER THE GAME YOU CAN CLICK ON THE IMAGE OR THE BUTTON</p>
-        <p>Keys to Play: A,S,D,W - MOUSE - Q,E ROTATE - ESCAPE MOUSE POINTER</p>
+        <p>Keys to Play: A,S,D,W - MOUSE - Q,E ROTATE - THE ESCAPE KEY RELEASES THE MOUSE CURSOR</p>
         <div class="container text-center"><a href="https://walterm128.github.io/gweinsteingame/" target="_blank"><img class="img-fluid" data-bs-hover-animate="pulse" src="assets/img/GWEinsteingame2.jpg"></a></div>
         <div class="container text-center" style="margin-top: 10px;margin-bottom: 10px;"><a class="btn btn-primary" role="button" data-bs-hover-animate="pulse" target="_blank" href="https://walterm128.github.io/gweinsteingame/">GW EINSTEING GAME HERE</a></div>
         <h1><strong><span style="text-decoration: underline;">BLACK HOLE</span></strong></h1>
