--- a/eventapi/html/allevents/downloadapp.html
+++ b/eventapi/html/allevents/downloadapp.html
@@ -43,15 +43,16 @@
         </div>
     </nav>
     <main class="page contact-page">
-        <section class="portfolio-block contact">
+        <section class="text-center portfolio-block contact">
             <div class="container">
                 <div class="heading">
                     <h2>coming soon download appLICATIONS</h2>
                 </div>
             </div>
             <div class="container text-center"><a class="btn btn-primary" role="button" href="https://play.google.com/store/apps/details?id=org.laserlabs.chirp" target="_blank">Android Ligo Application By Laser Labs</a></div>
-            <div class="container text-center" style="margin-top: 20px;"><a class="btn btn-primary" role="button" target="_blank" href="https://mega.nz/file/5JUBBQra#yMX1Yv16tyOG7VqhAx8ttgSaYjodSRR0uDgH6RWD0tw">GW Einstein Application Android</a></div>
-            <div class="container text-center" style="margin-top: 20px;"><a class="btn btn-primary" role="button" target="_blank" href="https://mega.nz/file/QU8BlSYb#wJAi58rPIm438C9gOmRvmVinE5Iua4b8FW5vJ2bceoA">GW Einstein Game Android</a></div>
+            <div class="container text-center" style="margin-top: 20px;margin-bottom: 20px;"><a class="btn btn-primary" role="button" target="_blank" href="https://mega.nz/file/5JUBBQra#yMX1Yv16tyOG7VqhAx8ttgSaYjodSRR0uDgH6RWD0tw">GW Einstein Application Android</a></div><img src="assets/img/GWGameAndroid.jpg">
+            <div class="container text-center"
+                style="margin-top: 20px;"><a class="btn btn-primary" role="button" target="_blank" href="https://mega.nz/file/QU8BlSYb#wJAi58rPIm438C9gOmRvmVinE5Iua4b8FW5vJ2bceoA">GW Einstein Game Android</a></div>
             <div class="container text-center" style="margin-top: 20px;"><a class="btn btn-primary" role="button" target="_blank" href="https://mega.nz/file/lBlUmKSS#CP56qdZKbc0EHokLn8_ZYsAQojn6Uj2-QJnK_1xAZaU">GW Einstein Game PC</a></div>
         </section>
     </main><img class="img-fluid" src="assets/img/900px-Crab_Nebula.jpg" style="width: 2080px;">
