--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -121,11 +121,10 @@
         <div class="container text-center"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="games.html" style="font-size: 37px;">Games</a></div>
         <div class="container text-center" style="margin-top: 20px;margin-bottom: 20px;"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="sounds.html" style="font-size: 37px;">Sounds</a></div>
         <div class="container text-center" style="margin-top: 20px;margin-bottom: 20px;"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="https://www.bbc.co.uk/programmes/p033jbv4" style="font-size: 37px;" target="_blank">Podcast</a></div>
-        <div class="container"><a class="btn btn-primary" role="button" style="font-size: 37px;" target="_blank" href="https://github.com/walterm128/">Github Project</a></div>
-        <div class="container">
-            <p></p>
-        </div>
-        <section class="portfolio-block photography">
+        <div class="container" style="padding-bottom: 15px;"><a class="btn btn-primary" role="button" style="font-size: 37px;" target="_blank" href="https://github.com/walterm128/">Github Project</a></div>
+        <div class="container" style="padding-bottom: 15px;"><a class="btn btn-primary" role="button" style="font-size: 37px;" target="_blank" href="https://www.canva.com/design/DAEJp70BxXo/jg0M0UxpbngkdicLKhyCMA/view?utm_content=DAEJp70BxXo&amp;utm_campaign=designshare&amp;utm_medium=link&amp;utm_source=publishsharelink">Project Slides</a></div>
+        <section
+            class="portfolio-block photography">
             <div class="container text-center">
                 <div class="row no-gutters">
                     <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/GWvisual.jpg" style="width: 568px;height: 309px;"></a></div>
@@ -133,16 +132,16 @@
                     <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/rayos-gamma_0.jpg" style="height: 309px;width: 561px;"></a></div>
                 </div>
             </div>
-        </section>
-        <section class="shadow portfolio-block photography">
-            <div class="container text-center">
-                <div class="row no-gutters">
-                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/supernova.jpg" style="width: 547px;height: 309px;"></a></div>
-                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/30-11-17-ligo.jpg" style="height: 309px;"></a></div>
-                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/logo2spaceapp.png" style="height: 310px;width: 517px;"></a></div>
-                </div>
+    </section>
+    <section class="shadow portfolio-block photography">
+        <div class="container text-center">
+            <div class="row no-gutters">
+                <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/supernova.jpg" style="width: 547px;height: 309px;"></a></div>
+                <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/30-11-17-ligo.jpg" style="height: 309px;"></a></div>
+                <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/logo2spaceapp.png" style="height: 310px;width: 517px;"></a></div>
             </div>
-        </section>
+        </div>
+    </section>
     </section>
     <section class="portfolio-block website gradient">
         <div class="container text-center"><img class="img-fluid shadow" data-bs-hover-animate="pulse" src="assets/img/bunnysuitadj1.jpg"></div>
