--- a/eventapi/html/allevents/downloadapp.html
+++ b/eventapi/html/allevents/downloadapp.html
@@ -52,7 +52,7 @@
             <div class="container text-center"><a class="btn btn-primary" role="button" href="https://play.google.com/store/apps/details?id=org.laserlabs.chirp" target="_blank">Android Ligo Application By Laser Labs</a></div>
             <div class="container text-center" style="margin-top: 20px;margin-bottom: 20px;"><a class="btn btn-primary" role="button" target="_blank" href="https://mega.nz/file/5JUBBQra#yMX1Yv16tyOG7VqhAx8ttgSaYjodSRR0uDgH6RWD0tw">GW Einstein Application Android</a></div><img class="img-fluid" src="assets/img/GWGameAndroid.jpg">
             <div class="container text-center"
-                style="margin-top: 20px;"><a class="btn btn-primary" role="button" target="_blank" href="https://mega.nz/file/xZEzBCRA#Ko4B6-pdTdCbVLMEL5ix5xdELBWNXnYs8tM4S4SqPig">GW Einstein Game Android</a></div>
+                style="margin-top: 20px;"><a class="btn btn-primary" role="button" target="_blank" href="https://mega.nz/file/tEcDEYgK#cFD69D9q5dncBf3ONB61enKKEp2z0-hd7VHUYmGjfLI">GW Einstein Game Android</a></div>
             <div class="container text-center" style="margin-top: 20px;"><a class="btn btn-primary" role="button" target="_blank" href="https://mega.nz/file/tEEDhCxL#r7tDmJcbU_0TZwevpsTHvu8971UWeLah85-Hiu6WhL0">GW Einstein Game PC</a></div>
         </section>
     </main><img class="img-fluid" src="assets/img/900px-Crab_Nebula.jpg" style="width: 2080px;">
