--- a/eventapi/html/allevents/downloadapp.html
+++ b/eventapi/html/allevents/downloadapp.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="container text-center"><a class="btn btn-primary" role="button" href="https://play.google.com/store/apps/details?id=org.laserlabs.chirp" target="_blank">Android Ligo Application By Laser Labs</a></div>
-            <div class="container text-center" style="margin-top: 20px;margin-bottom: 20px;"><a class="btn btn-primary" role="button" target="_blank" href="https://mega.nz/file/5JUBBQra#yMX1Yv16tyOG7VqhAx8ttgSaYjodSRR0uDgH6RWD0tw">GW Einstein Application Android</a></div><img class="img-fluid" src="assets/img/GWGameAndroid.jpg">
+            <div class="container text-center" style="margin-top: 20px;margin-bottom: 20px;"><a class="btn btn-primary" role="button" target="_blank" href="https://mega.nz/file/xE9xBSqB#PV3bFlRwwpDP2sG69FbhZnrkRNsDevtnwOUt2NrNWbQ">GW Einstein Application Android</a></div><img class="img-fluid" src="assets/img/GWGameAndroid.jpg">
             <div class="container text-center"
                 style="margin-top: 20px;"><a class="btn btn-primary" role="button" target="_blank" href="https://mega.nz/file/tEcDEYgK#cFD69D9q5dncBf3ONB61enKKEp2z0-hd7VHUYmGjfLI">GW Einstein Game Android</a></div>
             <div class="container text-center" style="margin-top: 20px;"><a class="btn btn-primary" role="button" target="_blank" href="https://mega.nz/file/tEEDhCxL#r7tDmJcbU_0TZwevpsTHvu8971UWeLah85-Hiu6WhL0">GW Einstein Game PC</a></div>
