--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -77,8 +77,8 @@
         <p style="font-size: 40px;"><strong><span style="text-decoration: underline;">EXPLORATION GAME</span></strong></p>
         <p>TO ENTER THE GAME YOU CAN CLICK ON THE IMAGE OR THE BUTTON</p>
         <p>Keys to Play: A,S,D,W - MOUSE - Q,E ROTATE - THE ESCAPE KEY RELEASES THE MOUSE CURSOR</p>
-        <div class="container text-center"><a href="https://walterm128.github.io/gweinsteingame/" target="_blank"><img class="img-fluid" data-bs-hover-animate="pulse" src="assets/img/GWEinsteingame2.jpg"></a></div>
-        <div class="container text-center" style="margin-top: 10px;margin-bottom: 10px;"><a class="btn btn-primary" role="button" data-bs-hover-animate="pulse" target="_blank" href="https://walterm128.github.io/gweinsteingame/">GW EINSTEING GAME HERE</a></div>
+        <div class="container text-center"><a href="https://walterm128.github.io/GodotSolarSystem/" target="_blank"><img class="img-fluid" data-bs-hover-animate="pulse" src="assets/img/GWEinsteingame2.jpg"></a></div>
+        <div class="container text-center" style="margin-top: 10px;margin-bottom: 10px;"><a class="btn btn-primary" role="button" data-bs-hover-animate="pulse" target="_blank" href="https://walterm128.github.io/GodotSolarSystem/">GW EINSTEING GAME HERE</a></div>
         <h1><strong><span style="text-decoration: underline;">BLACK HOLE</span></strong></h1>
         <p><br>The result is a gravitational field so strong that nothing, not even light, can escape.<br><br></p><a href="assets/img/1366_2000.jpg" target="_blank"><img class="img-fluid" src="assets/img/1366_2000.jpg"></a>
         <div class="container">
